--- a/src/app/counter/counter/counter.component.html
+++ b/src/app/counter/counter/counter.component.html
@@ -7,6 +7,9 @@
             <div class="my-3">
                 <app-counter-buttons ></app-counter-buttons>
             </div>
+            <div class="my-3">
+                <app-counter-input></app-counter-input>
+            </div>
         </div>
     </div>
   
