--- a/src/app/counter/counter-input/counter-input.component.html
+++ b/src/app/counter/counter-input/counter-input.component.html
@@ -2,3 +2,6 @@
     <input type="text" [(ngModel)]="value"  />
     <button (click)="addcounter()">Add Counter</button>
 </div>
+<div>
+    <span>{{channelName}}</span>
+</div>
