--- a/src/app/counter/counter-output/counter-output.component.html
+++ b/src/app/counter/counter-output/counter-output.component.html
@@ -1,3 +1,7 @@
 <div class="container">
-   <h3>Counter is {{(counter$ | async)?.counter}}</h3>
+   <!-- <h3>Counter is {{(counter$ | async)?.counter}}</h3> -->
+   <h3>Counter is {{ counter}}</h3>
+</div>
+<div class="my-3">
+   <span>Channel Name is {{channelName}}</span>
 </div>
