--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
 <div class="container">
-  <app-counter></app-counter>
+  <div class="row">
+    <app-header></app-header>
+    <div class="col-md-12 text-center">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+ 
 </div>
