--- a/src/app/counter/counter/counter.component.html
+++ b/src/app/counter/counter/counter.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-6 offset-md-6">
+        <div class="col-md-12 text-center">
             <div class="my-3">
                 <app-counter-output ></app-counter-output>
             </div>
