--- a/src/app/posts/posts-list/posts-list.component.html
+++ b/src/app/posts/posts-list/posts-list.component.html
@@ -19,6 +19,7 @@
                         <td>{{item.title}}</td>
                         <td>{{item.description}}</td>
                         <td><a class="btn btn-primary" [routerLink]="['edit',item.id]">Update</a></td>
+                        <td><a class="btn btn-primary" (click)="deletePost(item.id)">Delete</a></td>
                     </tr>
                 </tbody>
             </table>
