--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<div class="container">
+<div class="container-fluid">
   <div class="row">
     <app-header></app-header>
+    <app-loading-spinner *ngIf="showLoading | async"></app-loading-spinner>
     <div class="col-md-12 text-center">
       <router-outlet></router-outlet>
     </div>
