--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -16,7 +16,13 @@
             <a class="nav-link" href="#" [routerLink]="['/posts']">Posts</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" [routerLink]="['auth']">Login</a>
+            <a class="nav-link" href="#" [routerLink]="['auth']" *ngIf="!(isAuthenication | async)">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" [routerLink]="['auth/signup']" *ngIf="!(isAuthenication | async)">SignUp</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" *ngIf="(isAuthenication | async)">Logout</a>
           </li>
          
         </ul>
